[minor/svn] "alignment issue" with extended search engine (hmmm)
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@6605 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/themes/default/_css/general.css
+++ b/wims/public_html/themes/default/_css/general.css
@@ -169,3 +169,6 @@ span.tooltip {
  text-align:left;
  line-height:180%;
 }
+table.wims_search_engine td{
+text-align:left;
+}
